[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
clap = "4.0.29"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
serial_test = "*"
