[package]
name = "alle"
authors = ["Lyubomir Kyuchukov"]
license = "MIT"
description = "A terminal manager for your TODOs"
readme = "README.md"
homepage = "https://github.com/lkyuchukov/alle"
repository = "https://github.com/lkyuchukov/alle"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
clap = "4.0.29"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0"
dirs = "4.0"
comfy-table = "6.1.3"
chrono = { version = "0.4.23", features = ["serde"] }
